// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`should render correctly in element node in layers tab in tutorial mode 1`] = `
<div>
  <div
    class="right-panel-tabs"
  >
    <div
      class="tab layers"
      title="Layers (L)"
    >
      <img
        class="tab-icon"
        draggable="false"
        src="img/right-panel/icon-layers.svg"
      />
      <div
        class="tab-title"
      >
        Layers
      </div>
    </div>
    <div
      class="tab objects selected"
      title="Oval (O)"
    >
      <img
        class="tab-icon object"
        draggable="false"
        src="img/right-panel/icon-adjust.svg"
      />
      <div
        class="tab-title"
      >
        Oval
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly in element node in objects tab dxf object 1`] = `
<div>
  <div
    class="right-panel-tabs"
  >
    <div
      class="tab layers"
      title="Layers (L)"
    >
      <img
        class="tab-icon"
        draggable="false"
        src="img/right-panel/icon-layers.svg"
      />
      <div
        class="tab-title"
      >
        Layers
      </div>
    </div>
    <div
      class="tab objects selected"
      title="DXF Object (O)"
    >
      <img
        class="tab-icon object"
        draggable="false"
        src="img/right-panel/icon-adjust.svg"
      />
      <div
        class="tab-title"
      >
        DXF Object
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly in element node in objects tab multiple objects 1`] = `
<div>
  <div
    class="right-panel-tabs"
  >
    <div
      class="tab layers"
      title="Layers (L)"
    >
      <img
        class="tab-icon"
        draggable="false"
        src="img/right-panel/icon-layers.svg"
      />
      <div
        class="tab-title"
      >
        Layers
      </div>
    </div>
    <div
      class="tab objects selected"
      title="Multiple Objects (O)"
    >
      <img
        class="tab-icon object"
        draggable="false"
        src="img/right-panel/icon-adjust.svg"
      />
      <div
        class="tab-title"
      >
        Multiple Objects
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly in element node in objects tab not use tag 1`] = `
<div>
  <div
    class="right-panel-tabs"
  >
    <div
      class="tab layers"
      title="Layers (L)"
    >
      <img
        class="tab-icon"
        draggable="false"
        src="img/right-panel/icon-layers.svg"
      />
      <div
        class="tab-title"
      >
        Layers
      </div>
    </div>
    <div
      class="tab objects selected"
      title="Oval (O)"
    >
      <img
        class="tab-icon object"
        draggable="false"
        src="img/right-panel/icon-adjust.svg"
      />
      <div
        class="tab-title"
      >
        Oval
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly in element node in objects tab other types 1`] = `
<div>
  <div
    class="right-panel-tabs"
  >
    <div
      class="tab layers"
      title="Layers (L)"
    >
      <img
        class="tab-icon"
        draggable="false"
        src="img/right-panel/icon-layers.svg"
      />
      <div
        class="tab-title"
      >
        Layers
      </div>
    </div>
    <div
      class="tab objects selected"
      title="Imported Object (O)"
    >
      <img
        class="tab-icon object"
        draggable="false"
        src="img/right-panel/icon-adjust.svg"
      />
      <div
        class="tab-title"
      >
        Imported Object
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly in element node in objects tab svg object 1`] = `
<div>
  <div
    class="right-panel-tabs"
  >
    <div
      class="tab layers"
      title="Layers (L)"
    >
      <img
        class="tab-icon"
        draggable="false"
        src="img/right-panel/icon-layers.svg"
      />
      <div
        class="tab-title"
      >
        Layers
      </div>
    </div>
    <div
      class="tab objects selected"
      title="SVG Object (O)"
    >
      <img
        class="tab-icon object"
        draggable="false"
        src="img/right-panel/icon-adjust.svg"
      />
      <div
        class="tab-title"
      >
        SVG Object
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly in element node in objects tab textpath object 1`] = `
<div>
  <div
    class="right-panel-tabs"
  >
    <div
      class="tab layers"
      title="Layers (L)"
    >
      <img
        class="tab-icon"
        draggable="false"
        src="img/right-panel/icon-layers.svg"
      />
      <div
        class="tab-title"
      >
        Layers
      </div>
    </div>
    <div
      class="tab objects selected"
      title="Text on Path (O)"
    >
      <img
        class="tab-icon object"
        draggable="false"
        src="img/right-panel/icon-adjust.svg"
      />
      <div
        class="tab-title"
      >
        Text on Path
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly in path edit mode 1`] = `
<div>
  <div
    class="right-panel-tabs"
  >
    <div
      class="tab layers"
      title="Layers (L)"
    >
      <img
        class="tab-icon"
        draggable="false"
        src="img/right-panel/icon-layers.svg"
      />
      <div
        class="tab-title"
      >
        Layers
      </div>
    </div>
    <div
      class="tab objects selected"
      title="Path Edit (O)"
    >
      <img
        class="tab-icon object"
        draggable="false"
        src="img/right-panel/icon-adjust.svg"
      />
      <div
        class="tab-title"
      >
        Path Edit
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly no selected element 1`] = `
<div>
  <div
    class="right-panel-tabs"
  >
    <div
      class="tab layers selected"
      title="Layers (L)"
    >
      <img
        class="tab-icon"
        draggable="false"
        src="img/right-panel/icon-layers.svg"
      />
      <div
        class="tab-title"
      >
        Layers
      </div>
    </div>
    <div
      class="tab objects disabled"
      title="no_selection (O)"
    >
      <img
        class="tab-icon object"
        draggable="false"
        src="img/right-panel/icon-adjust.svg"
      />
      <div
        class="tab-title"
      >
        no_selection
      </div>
    </div>
  </div>
</div>
`;
